<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity">
    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txtCuadrado"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo4"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="5dp"/>



    <EditText
        android:id="@+id/edtbase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/base"
        android:inputType="number"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:layout_marginTop="30dp"/>


    <EditText
        android:id="@+id/edtaltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/altura"
        android:inputType="number"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:layout_marginTop="30dp"/>


    <Button
        android:id="@+id/btningresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/INGRESAR"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/txtolcontraseña"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvido_contraseña"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnmenú"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:text="@string/registro"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnanterior"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:layout_gravity="left"
        android:rotationX="-8"
        android:text="@string/siguiente"
        android:textSize="10dp" />


</LinearLayout>