<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rectangulo">

    <TextView
        android:id="@+id/txtrectangulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo3"
        android:textSize="60sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black" />

    <ImageView
        android:id="@+id/imgrectangulo"
        android:src="@drawable/img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edtancho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tituloancho"
        android:inputType="number"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="30dp"/>


    <EditText
        android:id="@+id/edtlargo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/titulolargo"
        android:inputType="number"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="30dp"/>





    <Button
        android:id="@+id/btncalcularrectangulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo5"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/txtrsrectangulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black" />


    <Button
        android:id="@+id/btnmenú"
        android:layout_width="90dp"
        android:layout_height="32dp"
        android:text="@string/siguiente"
        android:textSize="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="right"/>








</LinearLayout>